# caio

./: .gitignore  MANIFEST.in  Makefile  README.md  README.rst  Untitled.ipynb  example.py  linux_aio.c  linux_aio.csv  linux_aio.pyi  pyproject.toml  setup.py  test.c  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  tox.yml
benchmark/: README.md  bench.py  bench_go.go  bench_runner.py  benchmark.py  benchmark2.py  benchmark_common.py  benchmark_linux_aio.py  benchmark_python_aio.py  benchmark_read_common.py  benchmark_read_linux_aio.py  benchmark_read_python_aio.py  benchmark_read_thread_aio.py  benchmark_thread_aio.py  benchmark_threadpool.py  benchmark_write_common.py  benchmark_write_linux_aio.py  benchmark_write_python_aio.py  benchmark_write_thread_aio.py  gen_data.py  graph.py  plot_results.py  pyproject.toml  requirements.txt  results-linux-tmpfs.csv  results-linux-zfs.csv  results-m1-btrfs.csv  results-m1-tmpfs.csv  results.csv  simple_test.py
benchmark/results/: linux_aio_asyncio_chunk_1024.csv  linux_aio_asyncio_chunk_131072.csv  linux_aio_asyncio_chunk_16384.csv  linux_aio_asyncio_chunk_2048.csv  linux_aio_asyncio_chunk_262144.csv  linux_aio_asyncio_chunk_32768.csv  linux_aio_asyncio_chunk_4096.csv  linux_aio_asyncio_chunk_524288.csv  python_aio_asyncio_chunk_1024.csv  python_aio_asyncio_chunk_1048576.csv  python_aio_asyncio_chunk_131072.csv  python_aio_asyncio_chunk_16384.csv  python_aio_asyncio_chunk_2048.csv  python_aio_asyncio_chunk_262144.csv  python_aio_asyncio_chunk_32768.csv  python_aio_asyncio_chunk_4096.csv  python_aio_asyncio_chunk_65536.csv  thread_aio_asyncio_chunk_1024.csv  thread_aio_asyncio_chunk_1048576.csv  thread_aio_asyncio_chunk_131072.csv  thread_aio_asyncio_chunk_16384.csv  thread_aio_asyncio_chunk_2048.csv  thread_aio_asyncio_chunk_32768.csv  thread_aio_asyncio_chunk_4096.csv  thread_aio_asyncio_chunk_524288.csv  thread_aio_asyncio_chunk_8192.csv
caio/: __init__.py  abstract.py  aio.c  aio.pyi  asyncio_adapter.py  asyncio_base.py  linux_aio.c  linux_aio.pyi  linux_aio_asyncio.py  linux_uring.c  linux_uring.pyi  linux_uring_asyncio.py  python_aio.py  python_aio_asyncio.py  thread_aio.c  thread_aio.py  thread_aio.pyi  thread_aio_asyncio.py  version.py
caio/src/lfqueue/: LICENSE  lfq.c  test_multithread.c
caio/src/threadpool/: LINK
linux_aio/: __init__.py  _aio.c  _aio.pyi  aio.c  asyncio_adapter.py  context.pyi  eventfd.pyi  operation.pyi
scripts/: make-wheels.sh
src/: context.c  eventfd.c  linux_aio.h  operation.c
tests/: conftest.py  test_aio_context.py  test_aio_operation.py  test_asyncio_adapter.py  test_eventfd.py  test_impl_selector.py
