[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "caio"
license = "Apache-2.0"
license-files = ["COPYING"]
description = "Asynchronous file IO for Linux MacOS or Windows."
readme = "README.md"
authors = [{ name = "Dmitry Orlov", email = "me@mosquito.su"}]
requires-python = ">=3.9"
classifiers = [
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Microsoft",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/mosquito/caio/"

[project.optional-dependencies]
develop = [
  "aiomisc-pytest",
  "coveralls",
  "pylama[toml]",
  "pytest",
  "pytest-cov",
  "setuptools",
]

[tool.setuptools.packages.find]
include = ["caio*"]

[tool.setuptools.dynamic]
version = { attr = "caio.version.__version__" }

[tool.pylama]
ignore= "C901,E252"

[tool.pylama.linter.pycodestyle]
max_line_length = 80

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["lint", "mypy", "3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
pass_env = ["COVERALLS_*", "FORCE_COLOR", "GITHUB_*"]
extras = ["develop"]
usedevelop = true
commands = [
    ["pytest", "--cov=caio", "--cov-report=term-missing", "-sv", "tests"],
    ["-", "coveralls"]
]

[tool.tox.env.lint]
description = "Run linting"
deps = ["pyflakes~=2.4.0", "pylava"]
commands = [["pylama", "caio", "tests"]]

[tool.tox.env.mypy]
description = "Run type checking"
deps = ["mypy"]
commands = [
    ["mypy", "--allow-untyped-calls", "--allow-untyped-defs", "--allow-untyped-decorators", "caio"]
]
